--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/TweenMax.min.js"></script>
-    <script type="application/json" src="population.json"></script>
+    <script type="application/json" src="./population.json"></script>
     <style>
         *{
             font-family: Arial, Helvetica, sans-serif;
