--- a/index.html
+++ b/index.html
@@ -307,7 +307,16 @@
                     <input type="checkbox" class="sub_cat" name="sub_region_oceanie" disabled value="melanesia"> Melanesia<br>
                 </div>
             </form>
-            <button id="select_button">Confirm Selection</button>            
+            <form action="#">
+                <input type="checkbox" class="selectClass" name="continent" value="europe"> Europe
+                <div class="subclass">
+                    <input type="checkbox" class="sub_cat" name="sub_region_oceanie" disabled value="eastern_europe"> Eastern Europe<br>
+                    <input type="checkbox" class="sub_cat" name="sub_region_oceanie" disabled value="northern_europe"> Northern Europe<br>
+                    <input type="checkbox" class="sub_cat" name="sub_region_oceanie" disabled value="southern_europe"> Southern Europe<br>
+                    <input type="checkbox" class="sub_cat" name="sub_region_oceanie" disabled value="western_europe"> Western Europe<br>
+                </div>
+            </form>
+            <button id="start_btn">Confirm Selection</button>            
         </div>
 
         <div id="answer_section">
@@ -331,11 +340,7 @@
         <div id="stats_section">
             <button id="stats_btn">Back to Selection</button>
         </div>
-    </div>
-
 
     <script src="test.js"></script>
-    <script>
-    </script>
 </body>
 </html>
